Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4913

mgc import reconnect race

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.6.0
    • None
    • 3
    • 13574

      <0>[ 231.434653] LustreError: 26880:0:(import.c:286:ptlrpc_invalidate_import()) ASSERTION( imp->imp_invalid ) failed:
      <0>[ 231.445129] LustreError: 26880:0:(import.c:286:ptlrpc_invalidate_import()) LBUG
      <4>[ 231.452651] Pid: 26880, comm: mount.lustre
      <4>[ 231.456892]
      <4>[ 231.456892] Call Trace:
      <4>[ 231.461143] [<ffffffffa057b825>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      <4>[ 231.468255] [<ffffffffa057be27>] lbug_with_loc+0x47/0xb0 [libcfs]
      <4>[ 231.474624] [<ffffffffa08a3597>] ptlrpc_invalidate_import+0x377/0x8b0 [ptlrpc]
      <4>[ 231.482172] [<ffffffffa08a1a16>] ? ptlrpc_set_import_discon+0xf6/0x600 [ptlrpc]
      <4>[ 231.489805] [<ffffffffa08a3b03>] ptlrpc_reconnect_import+0x33/0x1a0 [ptlrpc]
      <4>[ 231.497100] [<ffffffffa05870d1>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
      <4>[ 231.503869] [<ffffffffa0380aec>] mgc_set_info_async+0x32c/0xc80 [mgc]
      <4>[ 231.510570] [<ffffffffa0722d75>] obd_set_info_async.clone.3+0xf5/0x3a0 [obdclass]
      <4>[ 231.518377] [<ffffffffa06fe1d6>] ? class_name2dev+0x56/0xe0 [obdclass]
      <4>[ 231.525164] [<ffffffffa072b471>] lustre_start_mgc+0x12a1/0x2020 [obdclass]
      <4>[ 231.532310] [<ffffffffa0724927>] ? server_kernel_mount+0x667/0xf30 [obdclass]
      <4>[ 231.539761] [<ffffffffa072ece8>] lustre_fill_super+0x2d8/0xfc0 [obdclass]
      <4>[ 231.546818] [<ffffffffa072ea10>] ? lustre_fill_super+0x0/0xfc0 [obdclass]
      <4>[ 231.553851] [<ffffffff8117997f>] get_sb_nodev+0x5f/0xa0
      <4>[ 231.559341] [<ffffffffa071f765>] lustre_get_sb+0x25/0x30 [obdclass]
      <4>[ 231.565850] [<ffffffff811795db>] vfs_kern_mount+0x7b/0x1b0
      <4>[ 231.571567] [<ffffffff81179782>] do_kern_mount+0x52/0x130
      <4>[ 231.577210] [<ffffffff81197da2>] do_mount+0x2d2/0x8d0
      <4>[ 231.582493] [<ffffffff81198430>] sys_mount+0x90/0xe0
      <4>[ 231.587687] [<ffffffff8100b0f2>] system_call_fastpath+0x16/0x1b

            cliffw Cliff White (Inactive)
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: